Fix pie chart labels going out of bounds

--- a/src/ng2d3.scss
+++ b/src/ng2d3.scss
@@ -306,6 +306,10 @@
   }
 }
 
+.pie-label {
+  font-size: 11px;
+}
+
 .pie-grid {
   .arc1 {
     opacity: 0.4;
